package fr.insee.eno.core.model;

public class Loop extends EnoObject {
}
