package fr.insee.eno.core.model.response;

public enum ResponseFormat {

    TEXT_DOMAIN,
    TEXT_AREA_DOMAIN,
    NUMERIC_DOMAIN,
    BOOLEAN_DOMAIN,
    CODE_DOMAIN,
    DATETIME_DOMAIN,
    DURATION_DOMAIN
}
